--- a/plugin.xml
+++ b/plugin.xml
@@ -135,8 +135,23 @@
         <framework src="com.android.support:appcompat-v7:22.2.0"/>
 
         <!-- QTPaySDK resources -->
-        <resource-file src="resources" target="res"/>
-        <source-file src="src/android/libs" target-dir="libs"/>
+        <resource-file src="resources/anim" target="res"/>
+        <resource-file src="resources/drawable" target="res"/>
+        <resource-file src="resources/drawable-hdpi" target="res"/>
+        <resource-file src="resources/drawable-xhdpi" target="res"/>
+        <resource-file src="resources/layout" target="res"/>
+        <resource-file src="resources/values" target="res"/>
+        <resource-file src="resources/values-v21" target="res"/>
+        <resource-file src="resources/xml" target="res"/>
+        <source-file src="src/android/libs/arm64" target-dir="libs"/>
+        <source-file src="src/android/libs/arm64-v8a" target-dir="libs"/>
+        <source-file src="src/android/libs/armeabi" target-dir="libs"/>
+        <source-file src="src/android/libs/armeabi-v7a" target-dir="libs"/>
+        <source-file src="src/android/libs/mips" target-dir="libs"/>
+        <source-file src="src/android/libs/mips64" target-dir="libs"/>
+        <source-file src="src/android/libs/dspread_android_sdk_2.3.9.jar" target-dir="libs"/>
+        <source-file src="src/android/libs/possdk_v0.3.jar" target-dir="libs"/>
+        <source-file src="src/android/libs/volley-14_10_10.jar" target-dir="libs"/>
 
         <!-- Plugin src-->
         <source-file src="src/android/QTPaySDK.java"
