--- a/plugin.xml
+++ b/plugin.xml
@@ -133,7 +133,7 @@
             <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
         </config-file>
 
-        <framework src="extras/android/support/v7/appcompat" custom="true"/>
+        <framework src="extras/android/support/v7/appcompat"/>
 
         <!-- QTPaySDK resources -->
         <resource-file src="resources/anim" target="res/anim"/>
