--- a/plugin.xml
+++ b/plugin.xml
@@ -265,7 +265,6 @@
         <source-file src="src/android/libs/volley-14_10_10.jar" target-dir="libs"/>
 
         <!-- Plugin src-->
-        <source-file src="src/android/QTPaySDK.java"
-                     target-dir="src/com/qfpay/qtpaysdk"/>
+        <source-file src="src/android/QTPaySDK.java" target-dir="src/com/qfpay/qtpaysdk"/>
     </platform>
 </plugin>
